# mautlier

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  main.c
benchmark/: benchmark.c  benchmark.h
evaluation/: eval.c  eval.h
hash/: hash.c  hash.h  polyglot.c  polyglot.h  polyglot_constants.h
interface/: cli.c  cli.h  uci.c  uci.h
scripts/: bishop_magic.py  gen_constants.py  pgn_extractor.py  rook_magic.py
search/: move_ordering.c  move_ordering.h  search.c  search.h  transposition_table.c  transposition_table.h
state/: board.c  board.h  constants.c  constants.h  fen.c  fen.h  move.c  move.h
test/: move_test.h  perft.c  perft.h
tuning/: data_parse.c  data_parse.h  tuning.c  tuning.h
utils/: bithelpers.h  debug_printer.c  debug_printer.h  diagnostic_tools.c  diagnostic_tools.h  misc.c  misc.h  stack.h
